# PersonaForge

./: .gitignore  README.md  Reconstruct.py  URL.txt  build_kg.py  chapter_url.txt  crawler.py  crawler_agent.py  extract.py  filter.py  inference.py  plan.md  pyproject.toml  requirements.txt  temp.py  test.ipynb  test.py  test_model.py  train_lora.py  train_model.py
RAG/: embedding.py  retrieve.py  temp.py  tempCodeRunnerFile.py
backend/: main.py  requirements.txt
crawler/: crawler_agent.py
extract/: 第1章.json  第2章.json  第3章.json
filter/: 第1章.json  第2章.json  第3章.json
frontend/: package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/pages/: ChatPage.tsx  FineTunePage.tsx
frontend/src/types/: index.ts
paragraph_data_db/abbe1bcd-a6a3-4991-a2c3-02ff19c895b0/: index_metadata.pickle
pipeline/: pipeline.py
prompts/: crawler.md
refactor/: 第1章.json  第2章.json  第3章.json
train/: Lora.py
utils/: config.py  logger.py  test.py  tools.py
utils/prompts/: chapter_url.md  crawler.md  extract.md  filter.md  refactor.md
