[project]
name = "new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
